Update and rename view-page-source.com-bountynext.webflow.io_.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com -->
 <!-- Last Published: Sat Jul 27 2019 11:58:49 GMT+0000 (UTC) -->
-<html data-wf-domain="bountynext.webflow.io" data-wf-page=
+<html lang="en-za" data-wf-domain="bountynext.webflow.io" data-wf-page=
 "5bf352bb8dea215051fb4428" data-wf-site="5bf352bb8dea21451cfb4429"
 data-wf-status="1">
 <head>
@@ -11,17 +11,13 @@ data-wf-status="1">
   "Become a Pro Bounty Hunter. Join bounty program with ease, Make your move faster and get paid more than average."
   name="description">
   <meta content=
-  "Bounty Next | ICO & STO Bounty Program Platform" property=
+  "Jamstack Next | The #1 Jamstack Platform Directory" property=
   "og:title">
   <meta content=
-  "Become a Pro Bounty Hunter. Join bounty program with ease, Make your move faster and get paid more than average."
+  "Discover the best platforms that support Jamstack for your next project or idea. Join our community with ease, make informed decisions and more."
   property="og:description">
-  <meta content=
-  "Bounty Next | ICO & STO Bounty Program Platform" property=
-  "twitter:title">
-  <meta content=
-  "Become a Pro Bounty Hunter. Join bounty program with ease, Make your move faster and get paid more than average."
-  property="twitter:description">
+ 
+
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name=
@@ -78,19 +74,19 @@ data-wf-status="1">
           </div>
           <div class="div-block-120">
             <nav role="navigation" class="nav-menu-4 w-nav-menu">
-              <a href="/bounty" class=
-              "bounty bn w-nav-link">Bounty</a>
+              <a href="/browse" class=
+              "bounty bn w-nav-link">Browse</a>
               <div data-delay="0" data-hover="false" class=
               "w-dropdown">
                 <div class="dropdown-toggle-5 w-dropdown-toggle">
                   <div class="icon-3 bn w-icon-dropdown-toggle">
                   </div>
                   <div class="text-block-42 bn">
-                    Bounties
+                    Platforms
                   </div>
                 </div>
                 <nav class="dropdown-list-5 w-dropdown-list">
-                  <a href="http://bountynext.com/bounties" class=
+                  <a href="#" class=
                   "menu-link w-dropdown-link">All</a><a href=
                   "http://bountynext.com/list/facebook" class=
                   "menu-link w-dropdown-link">Facebook</a><a href=
@@ -269,11 +265,16 @@ data-wf-status="1">
   <div class="section-28 wf-section">
     <div class="div-block-129">
       <div class="div-block-130">
-        <h1 class="heading-39">Become a pro Bounty Hunter</h1>
-      </div><a href="https://in.bountynext.com/" target="_blank"
+        <h1 class="heading-39">Become a pro Jamstack developer</h1>
+      </div><a href="#" target="_blank"
       class="button-17 w-button">Register Now</a>
     </div>
   </div>
+
+
+
+
+
   <div class="section-18 wf-section">
     <div class="div-block-75">
       <div class="collection-list-wrapper-4 w-dyn-list">
