--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@ data-wf-status="1">
           <div class="container-3 w-container">
             <a href="/" aria-current="page" class=
             "brand-2 w-nav-brand w--current"><img src=
-            "https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png"
-            width="26" alt="Clothier Icon" srcset=
-            "https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 500w, https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 800w, https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 1080w"
+            "/3BF53DA6-5208-4208-A38B-FC87B5D15236.png"
+            width="26" alt="Jamstacker Icon" srcset=
+            "/3BF53DA6-5208-4208-A38B-FC87B5D15236.png 500w, /3BF53DA6-5208-4208-A38B-FC87B5D15236.png 800w, /3BF53DA6-5208-4208-A38B-FC87B5D15236.png 1080w"
             sizes=
             "(max-width: 767px) 26px, (max-width: 991px) 3vw, 26px"
             class="image-9"></a><a href=
-            "https://join.clothier.co.za/" target="_blank" class=
-            "button-9 w-button">Join Now </a>
+            "https://join.jamstacker.xyz/" target="_blank" class=
+            "button-9 w-button">Go Premium </a>
             <div class=
             "div-search w-hidden-medium w-hidden-small w-hidden-tiny">
               <form action="/search" class="search-2 w-form">
