--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -540,7 +540,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -566,7 +566,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -592,34 +592,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
-              class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
-              <div style="background-color:#6a69e1" class=
-              "label vertical-label vertical-label-tablet">
-                Popular
-              </div>
-              <div class="category vertical">
-                Category Name
-              </div>
-              <div class="airdrop-value vertical">
-                $7k
-              </div>
-              <div class="airdrop-rating vertical">
-                ★★★★
-              </div>
-            </div></a>
-          </div>
-
-
-
-           <div role="listitem" class=
-          "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
-            "link-block-12 w-inline-block">
-            <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -646,7 +619,34 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              class="image-2">
+              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <div style="background-color:#6a69e1" class=
+              "label vertical-label vertical-label-tablet">
+                Popular
+              </div>
+              <div class="category vertical">
+                Category Name
+              </div>
+              <div class="airdrop-value vertical">
+                $7k
+              </div>
+              <div class="airdrop-rating vertical">
+                ★★★★
+              </div>
+            </div></a>
+          </div>
+
+
+
+           <div role="listitem" class=
+          "collection-item w-dyn-item w-col w-col-2">
+            <a href="/cmts/sample" class=
+            "link-block-12 w-inline-block">
+            <div class="div-block-4 vertical div-block">
+              <img width="75" height="75" alt="" src=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -700,7 +700,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -727,7 +727,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -754,7 +754,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -782,7 +782,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -809,7 +809,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -836,7 +836,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -894,7 +894,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -921,7 +921,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -946,7 +946,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -971,7 +971,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -998,7 +998,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -1024,7 +1024,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -1050,7 +1050,7 @@ data-wf-status="1">
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png"
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Example Title </h3>
               <div style="background-color:#6a69e1" class=
@@ -1112,7 +1112,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
@@ -1137,7 +1137,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
@@ -1161,7 +1161,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
@@ -1184,7 +1184,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
@@ -1208,7 +1208,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
@@ -1231,7 +1231,7 @@ data-wf-status="1">
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.png" class=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
               <h3 class="airdrop-name vertical">Changelog Title</h3>
               <div style="background-color:#6a69e1" class=
