--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com -->
 <!-- Last Published: Sat Jul 27 2019 18:18:51 GMT+0000 (UTC) -->
-<html lang="en-za" data-wf-domain="airdropnext.webflow.io" data-wf-page=
+<html lang="en-us" data-wf-domain="airdropnext.webflow.io" data-wf-page=
 "5ba7e424b828fc4396530a9c" data-wf-site="5ba7e424b828fc638b530a9b"
 data-wf-status="1">
 <head>
@@ -110,7 +110,7 @@ data-wf-status="1">
               <div class="dropdown-toggle-2 w-dropdown-toggle">
                 <div class="w-icon-dropdown-toggle"></div>
                 <div>
-                 Platforms
+                 Browse
                 </div>
               </div>
               <nav class="dropdown-list-3 w-dropdown-list">
@@ -137,7 +137,7 @@ data-wf-status="1">
               <div class="dropdown-toggle-3 w-dropdown-toggle">
                 <div class="w-icon-dropdown-toggle"></div>
                 <div>
-                  Categories
+                  Discover
                 </div>
               </div>
               <nav class="dropdown-list-4 w-dropdown-list">
@@ -156,7 +156,7 @@ data-wf-status="1">
                 target="_blank" class=
                 "category-link w-dropdown-link">Bounty</a>
               </nav>
-            </div><a href="https://pay.clothier.co.za" class=
+            </div><a href="/community" class=
             "nav-link-8 w-nav-link">Community Forum</a><a href=
             "/contact" class="nav-link-9 w-nav-link">Contact
             Support</a>
@@ -226,10 +226,12 @@ data-wf-status="1">
   <div class="wf-section">
     <div class=
     "div-block-73 w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">
-      <h1 class="heading-19">Join Clothier</h1>
-      <h1 class="heading-20">The Mega Launch
-      Campaign.</h1><a href="#" target="_blank" class=
-      "button-8 w-button">Join Now </a>
+      <h1 class="heading-19">Join Jamstacker</h1>
+      <h1 class="heading-20">Jamstacker Official Launch
+      Campaign.</h1>
+
+<a href="/donate" target="_blank" class=
+      "button-8 w-button">Donate </a>
     </div>
   </div>
 
@@ -485,7 +487,7 @@ data-wf-status="1">
 
 
 
-<!---SUPPLIERS-->
+<!---PLATFORMS-->
 
   <div class="section-15 wf-section">
     <div class="div-block-52">
@@ -672,12 +674,12 @@ data-wf-status="1">
   </div>
 
 
-<!---MANUFACTURERS-->
+<!---EXAMPLES-->
 
   <div class="section-13 wf-section">
     <div class="div-block-52">
       <div>
-        <h1 class="heading-list trending-airdrop">Agencies & Use Cases</h1>
+        <h1 class="heading-list trending-airdrop">Examples & Use Cases</h1>
       </div>
       <div>
         <div class="text-block-18">
@@ -859,15 +861,15 @@ data-wf-status="1">
     </div>
   </div>
 
-<!---END OF MANUFACTURERS SECTION-->
 
 
-<!---CMT-->
+
+<!---AGENCIES-->
 
   <div id="CMTs" class="section-13 wf-section">
     <div class="div-block-52">
       <div>
-        <h1 class="heading-list popular-airdrop">Top-Rated Developers</h1><br>
+        <h1 class="heading-list popular-airdrop">Top Agencies & Developers</h1><br>
       </div>
       <div>
         <div class="text-block-18">
@@ -1088,7 +1090,7 @@ data-wf-status="1">
   <div class="section-26 wf-section">
     <div class="div-block-125">
       <div>
-        <h1 class="heading-list popular-airdrop">In case you missed it...
+        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive offers from our sponsors and partners
 </h1>
       </div>
     </div>
@@ -1114,7 +1116,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1139,7 +1141,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1163,7 +1165,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1186,7 +1188,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1210,7 +1212,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1233,7 +1235,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Changelog Title</h3>
+              <h3 class="airdrop-name vertical">Sponsored Offers</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1267,7 +1269,7 @@ data-wf-status="1">
       <div class="text-block-14">
         The #1 Jamstack Directory Platform
       </div>
-      <h1 class="heading-10">Get free Jamstack insights</h1>
+      <h1 class="heading-10">Get free Jamstack insights, news and special offers delivered straight to your inbox</h1>
       <div class="divemail">
         <div class="form-block w-form">
           <form id="wf-form-Subscribe-AirdropNext" name=
@@ -1302,7 +1304,7 @@ data-wf-status="1">
             <a href="/" class="w-inline-block"><img src=
             "/3BF53DA6-5208-4208-A38B-FC87B5D15236.png"
             width="25" alt="Jamstacker Icon" srcset=
-            "https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 500w, https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 800w, https://cdn.shopify.com/s/files/1/0002/7960/9380/files/CLOTHIER_ICON_f6157e03-44e5-4fc8-9eb7-3797eff8dc89.png 1080w"
+            "/3BF53DA6-5208-4208-A38B-FC87B5D15236.png 500w, /3BF53DA6-5208-4208-A38B-FC87B5D15236.png 800w, /3BF53DA6-5208-4208-A38B-FC87B5D15236.png 1080w"
             sizes=
             "(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
             class="image-12"></a>
