--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ data-wf-status="1">
   <script type="text/javascript">
   !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
   </script>
-  <link href="/E490F7A2-C4DC-48D8-ACF8-5AC38C3E4188.png" rel=
-  "shortcut icon" type="image/x-icon">
-  <link href="/E490F7A2-C4DC-48D8-ACF8-5AC38C3E4188.png" rel=
+  <link href="https://jamstacker.xyz/3BF53DA6-5208-4208-A38B-FC87B5D15236.png" rel=
+  "shortcut icon" type="image/png">
+  <link href="https://jamstacker.xyz/3BF53DA6-5208-4208-A38B-FC87B5D15236.png" rel=
   "apple-touch-icon">
   <style>
   .w-webflow-badge {
