--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ data-wf-status="1">
   <div class="section-15 wf-section">
     <div class="div-block-52">
       <div>
-        <h1 class="heading-list featured-airdrop">Platforms & Service Providers</h1>
+        <h1 class="heading-list featured-airdrop">Platforms & Technology Providers</h1>
       </div>
       <div>
         <div class="text-block-18">
@@ -517,7 +517,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical">Contentful </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -544,7 +544,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Netlify </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -570,7 +570,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Strapi </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -596,34 +596,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
-              <div style="background-color:#6a69e1" class=
-              "label vertical-label vertical-label-tablet">
-                Popular
-              </div>
-              <div class="category vertical">
-                Category Name
-              </div>
-              <div class="airdrop-value vertical">
-                $7k
-              </div>
-              <div class="airdrop-rating vertical">
-                ★★★★
-              </div>
-            </div></a>
-          </div>
-
-
-
-           <div role="listitem" class=
-          "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
-            "link-block-12 w-inline-block">
-            <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
-              class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Builder.io </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -650,7 +623,34 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Sanity </h3>
+              <div style="background-color:#6a69e1" class=
+              "label vertical-label vertical-label-tablet">
+                Popular
+              </div>
+              <div class="category vertical">
+                Category Name
+              </div>
+              <div class="airdrop-value vertical">
+                $7k
+              </div>
+              <div class="airdrop-rating vertical">
+                ★★★★
+              </div>
+            </div></a>
+          </div>
+
+
+
+           <div role="listitem" class=
+          "collection-item w-dyn-item w-col w-col-2">
+            <a href="/cmts/sample" class=
+            "link-block-12 w-inline-block">
+            <div class="div-block-4 vertical div-block">
+              <img width="75" height="75" alt="" src=
+              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              class="image-2">
+              <h3 class="airdrop-name vertical"> GraphCMS </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -704,7 +704,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> SKYBOX </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -731,7 +731,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Dygest.org </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -758,7 +758,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Clothier </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -786,7 +786,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Pan Macmillan </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -813,7 +813,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Nexxus </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -840,7 +840,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> COVID-19 Tracker </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -898,7 +898,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Bejamas.io </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -925,7 +925,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Ionos </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -950,7 +950,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Appristas.io </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -975,7 +975,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Auth0 </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -1002,7 +1002,8 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Algolia
+ </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -1028,7 +1029,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Bloomreach </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -1054,7 +1055,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Example Title </h3>
+              <h3 class="airdrop-name vertical"> Relume </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -1116,13 +1117,13 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
+              <h3 class="airdrop-name vertical">Shopify</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Featured
+                Promoted
               </div>
               <div class="category vertical">
-                1 January 2022
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1141,13 +1142,13 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
+              <h3 class="airdrop-name vertical">Relume</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Featured
+                Promoted
               </div>
               <div class="category vertical">
-                1 January 2022
+                South Africa 🇿🇦 
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1165,7 +1166,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
+              <h3 class="airdrop-name vertical">Builder.io</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1188,7 +1189,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
+              <h3 class="airdrop-name vertical">Jamstack Themes</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1212,7 +1213,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offer</h3>
+              <h3 class="airdrop-name vertical">Namecheap</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1235,7 +1236,7 @@ data-wf-status="1">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Sponsored Offers</h3>
+              <h3 class="airdrop-name vertical">Webflow</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1267,9 +1268,9 @@ data-wf-status="1">
   <div class="section-5 wf-section">
     <div class="div-block-26">
       <div class="text-block-14">
-        The #1 Jamstack Directory Platform
+        The World's #1 Jamstack Directory Platform
       </div>
-      <h1 class="heading-10">Get free Jamstack insights, news and special offers delivered straight to your inbox</h1>
+      <h1 class="heading-10">Get free Jamstack insights...</h1>
       <div class="divemail">
         <div class="form-block w-form">
           <form id="wf-form-Subscribe-AirdropNext" name=
@@ -1349,9 +1350,9 @@ data-wf-status="1">
         <div class="div-block-36">
           <div class="div-block-50">
             <div class="footer-cr-text">
-              © 2022, Jamstacker.     <a href="/" class="footer-cr-text">  Terms</a>
-                  <a href="/" class="footer-cr-text">Privacy</a>  
-                 <a href="/" class="footer-cr-text">Contact</a></span>
+              © 2022, Jamstacker.     <a href="/terms" class="footer-cr-text">  Terms</a>
+                  <a href="/privacy" class="footer-cr-text">Privacy</a>  
+                 <a href="/contact" class="footer-cr-text">Contact</a></span>
             </div>
           </div>
           <div class=
