--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@ data-wf-status="1">
             <a href="/cmts/sample" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Contentful" src=
+              "/76284E91-FAC6-47EE-909F-602C3EC611AC.png"
               class="image-2">
               <h3 class="airdrop-name vertical">Contentful </h3>
               <div style="background-color:#6a69e1" class=
@@ -538,11 +538,11 @@ data-wf-status="1">
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/netlify" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Netlify" src=
+              "/2BC633A6-F85D-4702-A9A0-086BA8B6ADF7.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Netlify </h3>
               <div style="background-color:#6a69e1" class=
@@ -564,13 +564,13 @@ data-wf-status="1">
 
             <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/shifter" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Shifter" src=
+              "/75E11EC6-624D-4ED7-A232-DC747AE1C00E.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Strapi </h3>
+              <h3 class="airdrop-name vertical"> Shifter </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -590,11 +590,11 @@ data-wf-status="1">
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/builder-io" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Builder.io" src=
+              "/6321A54C-59C2-4016-8405-B70AB9D4C481.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Builder.io </h3>
               <div style="background-color:#6a69e1" class=
@@ -617,13 +617,13 @@ data-wf-status="1">
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/auth0" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Auth0" src=
+              "/66068AAD-A7C8-433B-8F06-74AC290227C4.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Sanity </h3>
+              <h3 class="airdrop-name vertical"> Auth0 </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -644,11 +644,11 @@ data-wf-status="1">
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/graphcms" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/04CFB4C1-5541-4203-BC18-BCFC0073DC2C.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> GraphCMS </h3>
               <div style="background-color:#6a69e1" class=
