--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ data-wf-status="1">
   .w-webflow-badge {
   display:none!important;
   visibility:hidden!important;
+}
+.image-2 {
+border: 2px solid #000!important;
+-webkit-box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
+box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
+
   }
   </style><!--PWABUILDER SCRIPTS-->
 
