--- a/index.html
+++ b/index.html
@@ -899,11 +899,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
     <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/agencies/bejamas" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Bejamas.io" src=
+              "/F0286289-80AC-421A-9EF7-07A1DD00429E.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Bejamas.io </h3>
               <div style="background-color:#6a69e1" class=
@@ -929,7 +929,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="/cmts/sample" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="Ionos" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Ionos </h3>
@@ -974,30 +974,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             </div></a>
           </div>
 
-           <div role="listitem" class=
-          "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
-            "link-block-12 w-inline-block">
-            <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
-              class="image-2">
-              <h3 class="airdrop-name vertical"> Auth0 </h3>
-              <div style="background-color:#6a69e1" class=
-              "label vertical-label vertical-label-tablet">
-                Popular
-              </div>
-              <div class="category vertical">
-                Category Name
-              </div>
-              <div class="airdrop-value vertical">
-                $7k
-              </div>
-              <div class="airdrop-rating vertical">
-                ★★★★
-              </div>
-            </div></a>
-          </div>
+          
 
 
 
@@ -1056,11 +1033,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/agencies/relume" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/D2D5D71F-4C65-4BEC-8E33-1447E1CCB109.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Relume </h3>
               <div style="background-color:#6a69e1" class=
@@ -1093,12 +1070,12 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 
-<!---CHANGELOG-->
+<!---SPONSORED-->
 
   <div class="section-26 wf-section">
     <div class="div-block-125">
       <div>
-        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive offers from our sponsors and partners
+        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive offers<br>from our sponsors and partners
 </h1>
       </div>
     </div>
@@ -1118,11 +1095,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
  <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://coingecko.com" target="_blank" class=
+            <a href="https://shopify.com" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
+              <img width="75" height="75" alt="Shopify" src=
+              "/F22EA441-650D-4DCF-89F3-96F6683D7783.png" class=
               "image-2">
               <h3 class="airdrop-name vertical">Shopify</h3>
               <div style="background-color:#6a69e1" class=
