--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 500w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 800w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1080w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -286,9 +286,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png 500w, /FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png 800w, /FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png 1080w, /FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -301,38 +301,23 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/314A714B-6B9A-4304-BED1-51DD26AEFA61.png 500w, /314A714B-6B9A-4304-BED1-51DD26AEFA61.png 800w, /314A714B-6B9A-4304-BED1-51DD26AEFA61.png 1080w, /314A714B-6B9A-4304-BED1-51DD26AEFA61.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
 
-                <div role="listitem" class=
+               <div role="listitem" class=
                   "collection-item-3 w-dyn-item w-col w-col-2">
                     <a href=
                     "#"
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/9732A575-8B78-47A9-8BAF-4C787ECB8F67.png
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 500w, /9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 800w, /9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 1080w, /9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 1201w"
-                    class="image-13"></div></a>
-                  </div>
-
-
-
-                  <div role="listitem" class=
-                  "collection-item-3 w-dyn-item w-col w-col-2">
-                    <a href=
-                    "#"
-                    target="_blank" class="w-inline-block">
-                    <div class="div-block-44"><img height="100"
-                    width="205" alt="Advertisement" src=
-                    "/C945B599-B313-4CC9-BE3D-9B959A9BB777.png"
-                    sizes="205px" srcset=
-                    "/C945B599-B313-4CC9-BE3D-9B959A9BB777.png 500w, /C945B599-B313-4CC9-BE3D-9B959A9BB777.png 800w, /C945B599-B313-4CC9-BE3D-9B959A9BB777.png 1080w, /C945B599-B313-4CC9-BE3D-9B959A9BB777.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -345,9 +330,24 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 500w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 800w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1080w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
+                    class="image-13"></div></a>
+                  </div>
+
+
+
+                  <div role="listitem" class=
+                  "collection-item-3 w-dyn-item w-col w-col-2">
+                    <a href=
+                    "#"
+                    target="_blank" class="w-inline-block">
+                    <div class="div-block-44"><img height="100"
+                    width="205" alt="Advertisement" src=
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    sizes="205px" srcset=
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -390,9 +390,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 500w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 800w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1080w, /F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png 1201w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -403,8 +403,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" src=
-                    "/F16FD61B-4D8C-4119-A3C4-6CDC6B2FE7C6.png
-                    alt="" class="image-13"></div></a>
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    alt="Advertisement" class="image-13"></div></a>
                   </div>
 
 
@@ -416,8 +416,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" src=
-                    "/C945B599-B313-4CC9-BE3D-9B959A9BB777.png"
-                    alt="" class="image-13"></div></a>
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    alt="Advertisement" class="image-13"></div></a>
                   </div>
                   
 
@@ -428,9 +428,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" src=
-                    "/9732A575-8B78-47A9-8BAF-4C787ECB8F67.png"
-                    alt="" sizes="205px" srcset=
-                    "/9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 500w, /9732A575-8B78-47A9-8BAF-4C787ECB8F67.png 615w"
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    alt="Advertisement" sizes="205px" srcset=
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 615w"
                     class="image-13"></div></a>
                   </div>
 
@@ -441,8 +441,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" src=
-                    "/FE784E59-B2FB-42DB-A05E-75D324CB5B5B.png"
-                    alt="" class="image-13"></div></a>
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    alt="Advertisement" class="image-13"></div></a>
                   </div>
 
 
@@ -453,8 +453,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" src=
-                    "/314A714B-6B9A-4304-BED1-51DD26AEFA61.png"
-                    alt="" class="image-13"></div></a>
+                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    alt="Advertisement" class="image-13"></div></a>
                   </div> 
 
 
@@ -503,7 +503,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       </div>
       <div>
         <div class="text-block-18">
-          <a href="/suppliers"
+          <a href="/platforms"
           class="link-2">See More</a>
         </div>
       </div>
@@ -518,7 +518,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/platforms/contentful" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Contentful" src=
@@ -690,7 +690,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       </div>
       <div>
         <div class="text-block-18">
-          <a href="/designers"
+          <a href="/examples"
           class="link-2">See More</a>
         </div>
       </div>
@@ -705,11 +705,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/examples/skybox" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/1C740D5B-B66A-45D4-81DA-EF1A180D0969.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> SKYBOX </h3>
               <div style="background-color:#6a69e1" class=
@@ -732,11 +732,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/examples/dygest" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Dygest.org" src=
+              "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.pn"
               class="image-2">
               <h3 class="airdrop-name vertical"> Dygest.org </h3>
               <div style="background-color:#6a69e1" class=
@@ -759,11 +759,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
             <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/examples/clothier" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Clothier" src=
+              "/0C097227-DD9D-4B5D-94B4-E8E0A30AB18E.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Clothier </h3>
               <div style="background-color:#6a69e1" class=
@@ -787,10 +787,10 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/examples/panmacmillan" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="Pan Macmillan" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Pan Macmillan </h3>
@@ -817,7 +817,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="/cmts/sample" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="Nexxus" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> Nexxus </h3>
@@ -844,7 +844,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="/cmts/sample" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="COVID-19 Tracker" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
               <h3 class="airdrop-name vertical"> COVID-19 Tracker </h3>
@@ -926,11 +926,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
             <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/agencies/ionos" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Ionos" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/33D05754-37EF-4B6D-B35B-E60D1507DF48.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Ionos </h3>
               <div style="background-color:#6a69e1" class=
@@ -1104,7 +1104,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical">Shopify</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Promoted
+                Sponsored
               </div>
               <div class="category vertical">
                 Worldwide 🌎
@@ -1120,7 +1120,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://coingecko.com" target="_blank" class=
+            <a href="https://relume.co.za" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
@@ -1167,7 +1167,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://coingecko.com" target="_blank" class=
+            <a href="https://jamstackthemes.com" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
@@ -1176,10 +1176,10 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical">Jamstack Themes</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Featured
+                Sponsored
               </div>
               <div class="category vertical">
-                1 January 2022
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1191,19 +1191,19 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
           <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://coingecko.com" target="_blank" class=
+            <a href="https://namecheap.com" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
+              <img width="75" height="75" alt="Namecheap" src=
+              "/633C5C3D-D285-454F-9C6F-AF21D4BC4D63.png" class=
               "image-2">
               <h3 class="airdrop-name vertical">Namecheap</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Featured
+                Sponsored
               </div>
               <div class="category vertical">
-                1 January 2022
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1223,10 +1223,10 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical">Webflow</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Featured
+                Sponsored
               </div>
               <div class="category vertical">
-                1 January 2022
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
