--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             sizes=
             "(max-width: 767px) 26px, (max-width: 991px) 3vw, 26px"
             class="image-9"></a><a href=
-            "https://join.jamstacker.xyz/" target="_blank" class=
+            "/premium" target="_blank" class=
             "button-9 w-button">Go Premium </a>
             <div class=
             "div-search w-hidden-medium w-hidden-small w-hidden-tiny">
