--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Dygest.org" src=
-              "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.pn"
+              "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.png"
               class="image-2">
               <h3 class="airdrop-name vertical"> Dygest.org </h3>
               <div style="background-color:#6a69e1" class=
